...
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="24sp"
...

        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_select"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/btn_text_select_complete"
                android:textSize="20sp"
                android:textStyle="bold" />
...
