...
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="#727272"
                tools:text="13000원"
                android:id="@+id/seat_selection_payment_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seat_selection_movie_name_text" />

...
