<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/woowa_backgorund"
    tools:context=".ui.movieselectseatactivity.MovieSelectSeatActivity">

    <TextView
        android:id="@+id/tv_screen"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginHorizontal="34dp"
        android:background="@color/woowa_gray"
        android:gravity="center"
        android:text="@string/tv_screen"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_seat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="34dp"
        android:paddingVertical="90dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/layout_total_information"
        app:layout_constraintTop_toBottomOf="@+id/tv_screen">


    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_total_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/woowa_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_movie_total_price"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_total_price"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="해리 포터와 마법사의 돌" />

        <TextView
            android:id="@+id/tv_movie_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/woowa_text_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="0원" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/btn_seat_confirm_check_color"
            android:text="@string/btn_check"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
